tests/ui/cfg/nested-cfg-attr-conditional-compilation.stderr
error[E0425]: cannot find function `f` in this scope
  --> $DIR/nested-cfg-attr-conditional-compilation.rs:17:5
   |
LL |     f()
   |     ^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
